# pyromaniac

./: .gitignore  Containerfile  README.md  entrypoint.sh  pyproject.toml  pyromaniac.sh
.github/workflows/: main.yml  publish.yml  tests.yml
docs/: _config.yaml  cli-help.md  cli-iso.md  cli-serve.md  cli.md  components-python.md  components-signature.md  components-stdlib.md  components-yaml.md  components.md  development.md  index.md  installation.md  recipes-libraries.md  recipes-moon-phase-toml.md  recipes-remote.md  recipes-rootless-podman.md  recipes-structure.md  recipes-user-units.md  recipes.md  security.md  stdlib-docs.py
docs/_layouts/: default.html
docs/assets/: default.css  rouge.css
pyromaniac/: __init__.py  __main__.py  compile.py  components.py  dictexpand.py  errors.py  paths.py  remote.py  utils.py
pyromaniac/args/: __init__.py  formatter.py  installer.py  parse.py  parser.py  types.py
pyromaniac/compiler/: __init__.py  butane.py  compiler.py  component.py  context.py  errors.py  library.py  pyromaniac.py  url.py
pyromaniac/components/: linger.py  merge.py  tree.py  unit.py
pyromaniac/iso/: __init__.py  errors.py
pyromaniac/server/: __init__.py  auth.py  certs.py  log.py  serve.py  server.py
stdlib/: contents.pyro  directories.pyro  directory.pyro  file.pyro  link.pyro  load.pyro  magic.pyro  merge.pyro  ownership.pyro  tree.pyro
stdlib/contents/: parse.pyro
stdlib/load/: json.pyro  toml.pyro  yaml.pyro
tests/: temp.py  test_args.py  test_iso.py  test_server.py
tests/compile/: test.py
tests/compiler/: test_butane.py  (+6 more)
(+78 files in other folders)
