[project]
name = "pyromaniac"
version = "0.2.0"
description = "Obsessed with creating Ignition"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "salatfreak" }]

dependencies = [
  "PyYAML ~= 6.0.1",
  "Jinja2 ~= 3.1.3",
  "cryptography ~= 42.0.5",
]

[tool.setuptools]
packages = ["pyromaniac"]
