[project]
name = "pyromaniac"
version = "0.4.0"
description = "Obsessed with creating Ignition"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "salatfreak" }]

dependencies = [
  "PyYAML ~= 6.0.2",
  "Jinja2 ~= 3.1.4",
  "cryptography ~= 43.0.1",
]

[tool.setuptools]
packages = ["pyromaniac"]
